# mpfr-cxx

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  make_single_header.py
benchmark/: CMakeLists.txt  operations.cpp  pow2.cpp  std_vector.cpp
cmake/: standard_project_settings.cmake
docs/: CMakeLists.txt  conf.py  index.rst  math.rst  mp_float.rst  mpfr.rst
include/mpfr/: enums.hpp  math.hpp  mp_float.hpp  mpfr.hpp
include/mpfr/detail/: epilogue.hpp  handle_as_mpfr.hpp  mpfr.hpp  prologue.hpp
test/: CMakeLists.txt  math.cpp  mpfr_fn.cpp  mpfr_layer.cpp
